--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
    
     <div class="container">
         <div class="pic">
-            <img src="./img/4.png" alt="Kunaka tadiwanashe" class="img-fluid">
+          <div class="inner">   <img src="./img/tk.png" alt="Kunaka tadiwanashe" class="img-fluid" ></div>
         </div>
     
         <div class="personal-info">
@@ -131,6 +131,13 @@
         <span>skills and experience</span>
     </h2>
    
+    <div class="progress">
+        <div class="progress-bar" role="progressbar" aria-valuenow="70"
+        aria-valuemin="0" aria-valuemax="100" style="width:70%">
+          70%
+        </div>
+      </div>
+
 </Section>
 
 
