--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
     <!-- banner -->
 
-    <!-- <section class="banner">
+     <section class="banner">
         <div class="container">
             <div class="name">
                 <p>hello i am</p>
@@ -72,11 +72,11 @@
                 <a href=""> <i class="fab fa-facebook"></i> facebook</a>
             </div>
         </div>
-    </section> -->
+    </section> 
 
     <!-- ABOUT -->
 
-    <!-- <section class="about">
+    <section class="about">
         <h2>
             About My self
             
@@ -105,7 +105,7 @@
                 <button>Download cv</button>
             </div>
         </div>
-    </section> -->
+    </section> 
 
     <!-- SKILLS AND EXPERIENCE -->
 
