--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
 
-  <!-- <header>
+   <header>
         <div class="logo">
             <img src="./img/logo_black-removebg-preview.png" alt="" />
         </div>
@@ -43,11 +43,11 @@
                 <button class="menu__body-link">hire me</button>
             </ul>
         </div>
-    </header>  -->
+    </header>  
 
   <!-- banner -->
 
-  <!-- <section class="banner">
+  <section class="banner">
         <div class="container">
             <div class="name">
                 <p>hello i am</p>
@@ -73,11 +73,11 @@
                 <a href=""> <i class="fab fa-facebook"></i> facebook</a>
             </div>
         </div>
-    </section>   -->
+    </section>   
 
   <!-- ABOUT -->
 
-  <!-- <section class="about" id="about" >
+   <section class="about" id="about" >
         <h2>
             About My self
             
@@ -106,11 +106,11 @@
                 <button>Download cv</button>
             </div>
         </div>
-    </section>   -->
+    </section>   
 
   <!-- SKILLS AND EXPERIENCE -->
 
-  <!-- <section class="skills" id="skills" > 
+  <section class="skills" id="skills" > 
 
         <div class="container">
             <h2>My Skills</h2>
@@ -229,11 +229,7 @@
         </div>
 
     </section>
-   -->
-
-
-
-
+  
 
 
   <section class="projects">
@@ -248,7 +244,7 @@
         <div class="overlay">
           <h3>
             <span>project name</span>
-            Eate out movement
+           Dreams
           </h3>
 
           <ul>
@@ -263,7 +259,7 @@
 
       <div class=" card project">
         <div class="image">
-          <img src="./img/projects/Screenshot (4).png" alt="">
+          <img src="./img/projects/advk.jpg" alt="">
         </div>
         <div class="overlay">
           <h3>
@@ -362,54 +358,8 @@
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
   <!--Footer  -->
-  <!-- <footer id="contact">
+   <footer id="contact">
 
  <div class="container">
      <h2>Contact Me</h2>
@@ -451,7 +401,7 @@
      <p>&copy  Copyright tadiwanashe kunaka. All Rights are Reserved.</p>
 
     </footer>
- -->
+ 
 
 
 
